--- a/views/main/error.njk
+++ b/views/main/error.njk
@@ -1,6 +1,6 @@
 {% extends "base.njk" %}
 
-{% block pageTitle %}Sorry, there is a problem with the service – 'SERVICE_NAME' – GOV.UK{% endblock %}
+{% block pageTitle %}{{ t('pages.error.pageTitle', { serviceName: config.SERVICE_NAME }) }}{% endblock %}
 
 {% set mainClasses = "govuk-main-wrapper--l" %}
 
