--- a/views/base.njk
+++ b/views/base.njk
@@ -65,7 +65,7 @@
               roronoa.zoro@law.com
             </li>
             <li class="moj-header__navigation-item">
-              <a class="moj-header__navigation-link govuk-!-font-weight-bold" href="#">Sign out</a>
+              <a class="moj-header__navigation-link govuk-!-font-weight-bold" href="#">{{t('common.signOut')}}</a>
             </li>
           </ul>
         </nav>
@@ -79,12 +79,12 @@
   navigation: [
     {
       href: "/cases/new",
-      text: "Your cases",
+      text: t('navigation.mainNav.yourCases'),
       active: not request or not request.originalUrl or not request.originalUrl.startsWith('/search')
     },
     {
       href: "/search",
-      text: "Search",
+      text: t('navigation.mainNav.search'),
       active: request and request.originalUrl and request.originalUrl.startsWith('/search')
     }
     ]
@@ -96,7 +96,7 @@
     tag: {
       text: config.SERVICE_PHASE
     },
-    html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.'
+    html: t('components.phaseBanner.feedbackText') + t('components.phaseBanner.feedbackLinkTextHTML')
   }) }}
   {% block backLink %}{% endblock %}
 {% endblock %}
@@ -116,27 +116,27 @@
       items: [
         {
           href: "#",
-          text: "Help"
+          text: t('navigation.footer.help')
         },
         {
           href: "#",
-          text: "Feedback"
+          text: t('navigation.footer.feedback')
         },
         {
           href: "#",
-          text: "Updates"
+          text: t('navigation.footer.updates')
         },
         {
           href: "#",
-          text: "Privacy Policy"
+          text: t('navigation.footer.privacyPolicy')
         },
         {
           href: "#",
-          text: "Cookie Policy"
+          text: t('navigation.footer.cookiePolicy')
         },
         {
           href: "#",
-          text: "Accessibility"
+          text: t('navigation.footer.accessibility')
         }
       ]
     }
