--- a/views/case_details/edit-client-email-address.njk
+++ b/views/case_details/edit-client-email-address.njk
@@ -5,12 +5,13 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 
+{% block pageTitle %}{{ t('forms.clientDetails.email.pageTitle', { caseReference: caseReference, serviceName: config.SERVICE_NAME }) }}{% endblock %}
 
 {% set backLinkHref = "/cases/" + caseReference + "/client-details" %}
 
 {% block backLink %}
   {{ govukBackLink({
-      text: "Back",
+      text: t('common.back'),
       href: backLinkHref,
       classes: "govuk-!-margin-bottom-0"
     }) }}
@@ -28,7 +29,7 @@
         <input type="hidden" name="existingEmailAddress" value="{{ existingEmailAddress }}">
         {{ govukInput({
           label: {
-            text: "Client's email address (optional)",
+            text: t('forms.clientDetails.email.title'),
             classes: "govuk-label--l",
             isPageHeading: true
           },
@@ -40,9 +41,9 @@
         }) }}
         <div class="govuk-button-group">
           {{ govukButton({
-            text: "Save"
+            text: t('common.save')
           }) }}
-          <a class="govuk-link" href="{{ backLinkHref }}">Cancel</a>
+          <a class="govuk-link" href="{{ backLinkHref }}">{{ t('common.cancel') }}</a>
         </div>
       </form>
     </div>
