--- a/views/cases/index.njk
+++ b/views/cases/index.njk
@@ -2,13 +2,13 @@
 
 {% block pageTitle %}
   {%- if activeTab == 'opened' -%}
-    Your Cases - Opened Cases – {{config.SERVICE_NAME}} – GOV.UK
+    {{ t('pages.yourCases.pageTitles.opened', { serviceName: config.SERVICE_NAME }) }}
   {%- elif activeTab == 'accepted' -%}
-    Your Cases - Accepted Cases – {{config.SERVICE_NAME}} – GOV.UK
+    {{ t('pages.yourCases.pageTitles.accepted', { serviceName: config.SERVICE_NAME }) }}
   {%- elif activeTab == 'closed' -%}
-    Your Cases - Closed Cases – {{config.SERVICE_NAME}} – GOV.UK
+    {{ t('pages.yourCases.pageTitles.closed', { serviceName: config.SERVICE_NAME }) }}
   {%- else -%}
-    Your Cases - New Cases – {{config.SERVICE_NAME}} – GOV.UK
+    {{ t('pages.yourCases.pageTitles.new', { serviceName: config.SERVICE_NAME }) }}
   {%- endif -%}
 {% endblock %}
 
@@ -24,13 +24,13 @@
   {# Main page heading - changes based on active tab #}
   <h1 class="govuk-heading-xl" id="page-heading">
     {%- if activeTab == 'opened' -%}
-        Opened cases
+        {{ t('pages.yourCases.openedCases') }}
       {%- elif activeTab == 'accepted' -%}
-        Accepted cases
+        {{ t('pages.yourCases.acceptedCases') }}
       {%- elif activeTab == 'closed' -%}
-        Closed cases
+        {{ t('pages.yourCases.closedCases') }}
       {%- else -%}
-        New cases
+        {{ t('pages.yourCases.newCases') }}
       {%- endif -%}
   </h1>
 
@@ -44,25 +44,25 @@
     tabs: [
       {
         id: "new",
-        text: "New",
+        text: t('common.status.new'),
         href: "/cases/new",
         partial: "cases/_new-partial.njk"
       },
       {
         id: "opened",
-        text: "Opened",
+        text: t('common.status.opened'),
         href: "/cases/opened",
         partial: "cases/_opened-partial.njk"
       },
       {
         id: "accepted",
-        text: "Accepted",
+        text: t('common.status.accepted'),
         href: "/cases/accepted",
         partial: "cases/_accepted-partial.njk"
       },
       {
         id: "closed",
-        text: "Closed",
+        text: t('common.status.closed'),
         href: "/cases/closed",
         partial: "cases/_closed-partial.njk"
       }
