--- a/views/case_details/edit-client-email-address.njk
+++ b/views/case_details/edit-client-email-address.njk
@@ -21,8 +21,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {% if error %}
-        {% set emailAddressErrorMessage = { text: error.inputErrors.emailAddress } %}
         {{ errorSummary(error.errorSummaryList) }}
+        {% set emailAddressErrorMessage = { text: error.inputErrors.emailAddress } if error.inputErrors.emailAddress %}
       {% endif %}
       <form method="post" action="/cases/{{ caseReference }}/client-details/change/email-address">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
