Update views to show remove confirmation page

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -221,7 +221,7 @@
             visuallyHiddenText: t('accessibility.visuallyHiddenText.changeThirdPartyContact')
           },
           {
-            href: "#",
+            href: "/cases/" + data.caseReference + "/confirm/remove-third-party/",
             text: t('common.remove'),
             visuallyHiddenText: t('accessibility.visuallyHiddenText.removeThirdPartyContact')
           }
