If applied, this adds the client third party name filed.

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -260,6 +260,7 @@
   }) }}
 {% else %}
   {{ govukButton({
+    href: "/cases/" + data.caseReference + "/add-third-party",
     text: t('pages.caseDetails.buttons.addThirdPartyContact'),
     classes: "govuk-button--secondary"
   }) }}
