If applied, this adds the client third party name filed.

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -216,7 +216,7 @@
       actions: {
         items: [
           {
-            href: "#",
+            href: "/cases/" + data.caseReference + "/client-details/edit/third-party",
             text: t('common.change'),
             visuallyHiddenText: t('accessibility.visuallyHiddenText.changeThirdPartyContact')
           },
