If applied, this adds in the relationship to client input (and removes not needed validation)

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -248,7 +248,7 @@
         key: "emailAddressThirdParty"
       },
       {
-        label: t('forms.clientDetails.thirdParty.relationshipToClient'),
+        label: t('forms.clientDetails.thirdParty.relationshipToClient.title'),
         key: "relationshipToClientThirdParty"
       },
       {
